# portfolio

./: .aiignore  .cursorignore  .eleventy.js  .eleventy.ts  .eleventyignore  .gitignore  AGENTS.md  LICENSE  MIGRATION.md  README.md  amplify.yml  astro.config.mjs  bootstrap.sh  deploy.sh  index.html  jest.config.js  jest.config.ts  jest.setup.js  nodemon.json  package-astro.json  package-lock.json  package.json  pyproject.toml  serverless.yml  tailwind.config.js  tailwind.config.ts  tsconfig.build.json  tsconfig.client.json  tsconfig.json  update-frontmatter.js
.cursor/: environment.json
.husky/: pre-commit
.junie/: guidelines.md
.taskmaster/: config.json  state.json
UI_UX_GUIDE/: BLOG - Conceptual Map .md
amplify/: .gitignore  README.md  backend.ts
backend/: README.md  app.py  app_debug.py  package-lock.json  package.json  pyproject.toml  serverless.yml
backend/api_default_mocks/: generic_model_field_required_422.json  mock_dynamo_not_found_500.json  model_type_does_not_match_422.json  something_unexpected_happened_500.json
backend/extractors/: __init__.py  google_trends.py  stack_overflow_trends.py
backend/extractors/src/: config.py  utils.py
backend/serverless_manifests/: every_lambda_etl.yml  python_requirements.yaml  rest_api_lambdas.yml
backend/src/: __init__.py
backend/src/core/: __init__.py  config.py  custom_logger.py  json_serializer.py  openapi_mods.py  pre_after_requests.py  response_models.py  sfn_utils.py  swagger_utils.py  utils.py
backend/src/v1/: __init__.py
backend/src/v1/misc/: __init__.py  health_check.py
blog_posts/: apache-airflow-architecture-design.es.md  aws-certified-database-specialty.en.md  aws-cloud-practitioner.es.md  aws-developer-associate.en.md  aws-solutions-architect-associate.en.md  big-data-etls.es.md  black-belt-architecture.en.md  black-belt-architecture.es.md  blog_posts.json  directus-backend.en.md  encuesta-empleados.en.md  encuesta-empleados.es.md  encuesta-qr.en.md  encuesta-qr.es.md  golden-record.en.md  golden-record.es.md  gw-postpurchase.en.md  gw-postpurchase.es.md  invoice-extraction-automation.es.md  lead-management.en.md  lead-management.es.md  mfa-for-git-repositories.es.md  terraform-associate.en.md
docs/: AMPLIFY_SETUP.md  TS_IMPLEMENTATION.md  authoring.md  client-development.md  first-time-deploy.md  language-switching.md
lambda_layers/: build.sh  download_a_layer.sh  serverless.yml
public/: _headers  robots.txt  site.webmanifest
scripts/: dev.ts  test-build.js  test-content.js  test-i18n.js  test-markdown.js
src/: sitemap.njk
webapp/: app.py  deploy.sh  entrypoint.py  entrypoint_prod.py  index.py  package-lock.json  package.json  pyproject.toml  serverless.yml
webapp/apps/: blog.py  conocer_web.py  contacto.py  experiencia.py  global_situation.py  home.py  singapore.py  visualize.py
webapp/core/: config.py  ssm_parameter_store.py
webapp/src/apps/: about_me.py  blog.py  contact.py  home.py  know_this_web_app.py  visualize.py
webapp/src/apps/experience/: airflow_cheap.py  alb.py  cheap_bi.py  know_this_web_app.py
webapp/src/core/: app.py  config.py  navbar.py  utils.py
(+233 files in other folders)
