[tool.poetry]
name = "soysofia-portfolio"
version = "1.0.0"
description = ""
authors = ["yokharian"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.8.1"
dash-bootstrap-components = "^1.1.0"
pandas = "^1.4.2"
pytrends = "^4.8.0"
# region pinned libraries version because of https://stackoverflow.com/q/67553537
Flask = "1.1.4"
Werkzeug = "1.0.1"
MarkupSafe = "2.0.1"
# endregion
openpyxl = "^3.0.10"
requests = "^2.28.0"
fsspec = "^2022.5.0"
s3transfer = "^0.6.0"
python-multipart = "^0.0.5"
s3fs = "*"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
