[tool.poetry]
name = "soysofia-portfolio"
version = "1.0.0"
description = ""
authors = ["yokharian"]

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.8.1"
dash-bootstrap-components = "^1.1.0"
pandas = "^1.4.2"
pytrends = "^4.8.0"
# region pinned libraries version because of https://stackoverflow.com/q/67553537
Flask = "^1.1.4"
Werkzeug = "1.0.1"
MarkupSafe = "2.0.1"
# endregion
openpyxl = "^3.0.10"
fsspec = "^2022.5.0"
s3transfer = "^0.6.0"
python-multipart = "^0.0.5"
s3fs = "*"
fastapi = {extras = ["orjson", "requests"], version = "^0.70.0"}
mangum = "^0.12.2"
contextlib2 = "^21.6.0"
click = "^8.0.1"
xlsx2csv = "^0.7.8"
loguru = "^0.5.3"
email-validator = "^1.1.3"
StackAPI = "^0.2.0"
setuptools = "^62.3.4"
Brotli = "^1.0.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.6"
pytest = "^6.2.5"
black = {extras = ["jupyter"], version = "^21.8b0"}
jupyter = "^1.0.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]