[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["yokharian <cdmx.sofia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
loguru = "^0.6.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
orjson = "^3.7.3"
typing-extensions = "^4.2.0"


[tool.poetry.dev-dependencies]
boto3 = "^1.24.7"
black = {extras = ["jupyter"], version = "^22.3.0"}
pytest = "^7.1.2"
jupyter = "^1.0.0"
uvicorn = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
