[tool.poetry]
name = "yokharianPortfolioWebsite"
version = "1.0.0"
description = ""
authors = ["yokharian <cdmx.sofia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.5.0"
dash-bootstrap-components = "^1.1.0"
importlib-metadata = "^4.11.4"
plotly = "^5.9.0"
Werkzeug = "^2.1.2"
Flask = "^2.1.2"
Flask-Compress = "1.9.0"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.7"
black = {extras = ["jupyter"], version = "^22.3.0"}
pytest = "^7.1.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
